@@ -11,14 +11,4 @@ USER root
 
 RUN ls
 
-RUN cd target
-
-RUN ls
-
-#RUN export MAVEN_OPTS='-Xmx512m -XX:MaxPermSize=128m'
-
-#RUN mvn clean
-
-#RUN mvn install
-
-#ENTRYPOINT ["java", "-cp", "*.jar", "com.apiumtech.br.gateways.Orchestrator"]
+ENTRYPOINT ["java", "-cp", "*.jar", "com.apiumtech.br.gateways.Orchestrator"]
